Use webcomponents.min.js CDN

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Web components sample</title>
 	<link rel="stylesheet" href="assets/css/common.css">
-	<script src="assets/components/webcomponents.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.22/webcomponents.min.js"></script>
 	<link rel="import" href="component.html"></script>
 </head>
 <body>
